refactor: 단체 지정(주문 테이블 포함) 관련 로직 리팩터링 및 JPA 전환